--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <a class="nav-link fw-bold py-1 px-0" href="https://sephiaskygaming.itch.io/">Games</a>
         <a class="nav-link fw-bold py-1 px-0" href="https://sephiasky.github.io/sephiasky.com/">Blog</a>
         <a class="nav-link fw-bold py-1 px-0" href="http://www.sephiasky.com/donate">Donate</a>
-        <a class="nav-link fw-bold py-1 px-0" href="http://www.sephiasky.me/">About</a>
+        <a class="nav-link fw-bold py-1 px-0 active" href="http://www.sephiasky.me/">About</a>
       </nav>
     </div>
   </header>
