--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Embark on epic gaming adventures with our blog! From game reviews to insider tips, stay tuned for exciting content, including future games I am making">
-    <title>Sephia Sky | Gameplay Expert Tips, Review and Strategies</title>
+    <title>Sephia Sky | Gameplay, Expert Tips, Review and Strategies</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/navbar-fixed/">
 
