--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
       <div class="position-sticky" style="top: 2rem;">
         <div class="p-4 mb-3 bg-body-tertiary rounded">
           <h4 class="fst-italic">About</h4>
-          <p class="mb-0">Customize this section to tell your visitors a little bit about your publication, writers, content, or something else entirely. Totally up to you.</p>
+          <p class="mb-0">As an indie game developer and avid gamer, I’ve spent countless hours immersed in pixelated realms. From retro classics to cutting-edge titles, I believe that every game has a story to tell. Join me on this adventure as we unravel gaming mysteries and celebrate victories together.</p>
         </div>
 
         <div>
