--- a/index.html
+++ b/index.html
@@ -135,18 +135,18 @@
 
 <main class="container">
 
-  <div class="p-4 p-md-5 mb-4 rounded text-body-emphasis bg-body-secondary">
+  <div class="p-4 p-md-5 mb-4 rounded text-body-emphasis bg-body-secondary mt-4">
     <div class="col-lg-6 px-0">
-      <h1 class="display-4 fst-italic">Title of a longer featured blog post</h1>
-      <p class="lead my-3">Multiple lines of text that form the lede, informing new readers quickly and efficiently about what’s most interesting in this post’s contents.</p>
-      <p class="lead mb-0"><a href="#" class="text-body-emphasis fw-bold">Continue reading...</a></p>
+      <h1 class="display-4 fst-italic">My Game Developer Story As A PC Game YouTuber</h1>
+      <p class="lead my-3">Let me share with you my journey of becoming a game developer and PC gamer. You might be wondering why I decided to make games. I think it would be nice to play my own game and have everyone join.</p>
+      <p class="lead mb-0"><a href="#" class="text-body-emphasis fw-bold">Coming soon...</a></p>
     </div>
   </div>
 
   <div class="row g-5">
     <div class="col-md-8">
       <h3 class="pb-4 mb-4 fst-italic border-bottom">
-        From the Firehose
+        Pages from the Lore Books
       </h3>
 
       <article class="blog-post">
@@ -279,32 +279,32 @@
         </div>
 
         <div>
-          <h4 class="fst-italic">Recent posts</h4>
+          <h4 class="fst-italic">Youtube Post</h4>
           <ul class="list-unstyled">
             <li>
-              <a class="d-flex flex-column flex-lg-row gap-3 align-items-start align-items-lg-center py-3 link-body-emphasis text-decoration-none border-top" href="#">
+              <a class="d-flex flex-column flex-lg-row gap-3 align-items-start align-items-lg-center py-3 link-body-emphasis text-decoration-none border-top" href="https://youtu.be/fW6o7rdhxI8?si=rl5J9r5vG6S5p555">
                 <svg class="bd-placeholder-img" width="100%" height="96" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>
                 <div class="col-lg-8">
-                  <h6 class="mb-0">Example blog post title</h6>
-                  <small class="text-body-secondary">January 15, 2023</small>
+                  <h6 class="mb-0">How to get Crown Gems in Elder Scrolls Online</h6>
+                  <small class="text-body-secondary">Aug 19, 2020</small>
                 </div>
               </a>
             </li>
             <li>
-              <a class="d-flex flex-column flex-lg-row gap-3 align-items-start align-items-lg-center py-3 link-body-emphasis text-decoration-none border-top" href="#">
+              <a class="d-flex flex-column flex-lg-row gap-3 align-items-start align-items-lg-center py-3 link-body-emphasis text-decoration-none border-top" href="https://youtu.be/uRR7yakGVQw?si=4hPRhJNQA31XgUJW">
                 <svg class="bd-placeholder-img" width="100%" height="96" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>
                 <div class="col-lg-8">
-                  <h6 class="mb-0">This is another blog post title</h6>
+                  <h6 class="mb-0">How to get Bastian Hallix as companion in ESO</h6>
                   <small class="text-body-secondary">January 14, 2023</small>
                 </div>
               </a>
             </li>
             <li>
-              <a class="d-flex flex-column flex-lg-row gap-3 align-items-start align-items-lg-center py-3 link-body-emphasis text-decoration-none border-top" href="#">
+              <a class="d-flex flex-column flex-lg-row gap-3 align-items-start align-items-lg-center py-3 link-body-emphasis text-decoration-none border-top" href="https://youtu.be/Yj4bjXT3HoY?si=Eiy_Z4yDDe5DC8fz">
                 <svg class="bd-placeholder-img" width="100%" height="96" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>
                 <div class="col-lg-8">
-                  <h6 class="mb-0">Longer blog post title: This one has multiple lines!</h6>
-                  <small class="text-body-secondary">January 13, 2023</small>
+                  <h6 class="mb-0">How to get Mirri Elendis as companion in ESO</h6>
+                  <small class="text-body-secondary">Jun 3, 2021</small>
                 </div>
               </a>
             </li>
