--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Embark on epic gaming adventures with our blog! From game reviews to insider tips, stay tuned for exciting content, including future games I am making">
     <title>Sephia Sky | Gameplay, Expert Tips, Reviews and Strategies</title>
+    <link rel="shortcut icon" type="image/x-icon" href="assets/favicon.ico">
 
-<!---    <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/navbar-fixed/">   --->
- 
-<link href="js/bootstrap.min.css" rel="stylesheet">
+ <link href="js/bootstrap.min.css" rel="stylesheet">
 
     <style>
       .bd-placeholder-img {
