--- a/index.html
+++ b/index.html
@@ -138,7 +138,20 @@
       <h3 class="pb-4 mb-4 fst-italic border-bottom">
         Pages from the Lore Books
       </h3>
+    <!----  starts here  ---->  
+      <article class="blog-post">
+        <h2 class="display-5 link-body-emphasis mb-1">Test Blog</h2>
+        <p class="blog-post-meta">January 15, 2024 by Sephia Sky</p>
 
+        <p>This is some additional paragraph placeholder content. It has been written to fill the available space and show how a longer snippet of text affects the surrounding content. We'll repeat it often to keep the demonstration flowing, so be on the lookout for this exact same string of text.</p>
+        <ul>
+          <li>Apples</li>
+          <li>Oranges</li>
+          <li>Grapes</li>
+        </ul>
+        <p>This is some additional paragraph placeholder content. It's a slightly shorter version of the other highly repetitive body text used throughout.</p>
+      </article>
+      <!---- ends here  ---->  
       <article class="blog-post">
         <h2 class="display-5 link-body-emphasis mb-1">Sample blog post</h2>
         <p class="blog-post-meta">January 1, 2021 by <a href="#">Mark</a></p>
