--- a/index.html
+++ b/index.html
@@ -140,16 +140,20 @@
       </h3>
     <!----  starts here  ---->  
       <article class="blog-post">
-        <h2 class="display-5 link-body-emphasis mb-1">Test Blog</h2>
+        <h2 class="display-5 link-body-emphasis mb-1">The Grind, the Lag, and the Rage Quit: MMORPG Realities</h2>
         <p class="blog-post-meta">January 15, 2024 by Sephia Sky</p>
 
-        <p>This is some additional paragraph placeholder content. It has been written to fill the available space and show how a longer snippet of text affects the surrounding content. We'll repeat it often to keep the demonstration flowing, so be on the lookout for this exact same string of text.</p>
-        <ul>
-          <li>Apples</li>
-          <li>Oranges</li>
-          <li>Grapes</li>
-        </ul>
-        <p>This is some additional paragraph placeholder content. It's a slightly shorter version of the other highly repetitive body text used throughout.</p>
+        <p>Hey, fellow gamers! Today I want to talk about a problem that many of us face when playing mmorpgs: the game's lifespan. How many times have you invested hours, days, or even months into a game, only to see it die out, lose players, or become a cash grab? I know I have, and it sucks.</p>
+        <blockquote>
+        <p>One of the main issues with mmorpgs is that they are designed to keep players hooked for as long as possible, but they often fail to deliver on their promises. They promise us endless content, epic adventures, and social interactions, but they end up being repetitive, boring, and isolating. They make us pay for everything, from cosmetics to inventory space to power-ups, and they don't care about the quality of the game or the feedback of the players. They just want to squeeze as much money as possible from us before moving on to the next project.</p>
+        <blockquote>
+        <p>Another issue is that mmorpgs are constantly evolving and changing, but not always for the better. Sometimes they introduce new features or updates that break the game, make it unbalanced, or ruin the fun. Sometimes they remove features or content that we loved, or change the core mechanics of the game without warning. Sometimes they just stop updating the game altogether, leaving it in a state of decay and neglect.</p>
+        <blockquote>
+        <p>This leads to a situation where our gaming life outlives our mmorpg. We grow attached to our characters, our guilds, our friends, and our memories, but we have no reason to keep playing the game. We feel bored, frustrated, or betrayed by the game developers. We lose interest in the game, or we move on to another one. We leave behind a part of ourselves that we can never get back.</p>
+        <blockquote>
+        <p>I think this is a sad and unfortunate reality of mmorpgs, and I wish there was a way to prevent it. I wish there were more games that respected their players, that offered meaningful and engaging content, that listened to their feedback, and that cared about their longevity. I wish there were more games that made us happy, not addicted.</p>
+        <hr>
+        <p>What do you think? Do you agree with me? Have you ever experienced this problem with mmorpgs? How do you cope with it? I'll be posting this on my <a href="https://twitter.com/sephia_sky">Twitter account</a>, let me know your comment. Thanks for reading!</p>            
       </article>
       <!---- ends here  ---->  
       <article class="blog-post">
