--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
       </h3>
     <!----  starts here  ---->  
       <article class="blog-post">
-        <h2 class="display-5 link-body-emphasis mb-1">The Grind, the Lag, and the Rage Quit: MMORPG Realities</h2>
+        <h2 class="display-5 link-body-emphasis mb-1" id="Player-Issues-With-MMORPG">The Grind, the Lag, and the Rage Quit: MMORPG Realities</h2>
         <p class="blog-post-meta">January 15, 2024 by Sephia Sky</p>
 
         <p>Hey, fellow gamers! Today I want to talk about a problem that many of us face when playing mmorpgs: the game's lifespan. How many times have you invested hours, days, or even months into a game, only to see it die out, lose players, or become a cash grab? I know I have, and it sucks.</p>
@@ -153,7 +153,7 @@
         <blockquote>
         <p>I think this is a sad and unfortunate reality of mmorpgs, and I wish there was a way to prevent it. I wish there were more games that respected their players, that offered meaningful and engaging content, that listened to their feedback, and that cared about their longevity. I wish there were more games that made us happy, not addicted.</p>
         <hr>
-        <p>What do you think? Do you agree with me? Have you ever experienced this problem with mmorpgs? How do you cope with it? I'll be posting this on my <a href="https://twitter.com/sephia_sky">Twitter account</a>, let me know your comment. Thanks for reading!</p>            
+        <p>What do you think? Do you agree with me? Have you ever experienced this problem with mmorpgs? How do you cope with it? I'll be posting this on my <a href="https://twitter.com/sephia_sky">Twitter</a> account, let me know your comment. Thanks for reading!</p>            
       </article>
       <!---- ends here  ---->  
       <article class="blog-post">
