--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
   <div class="row g-5">
     <div class="col-md-8">
       <h3 class="pb-4 mb-4 fst-italic border-bottom">
-        Pages from the Lore Books
+        Pages from the Lore Book
       </h3>
     <!----  starts here  ---->  
       <article class="blog-post">
