--- a/index.html
+++ b/index.html
@@ -140,6 +140,31 @@
       </h3>
     <!----  starts here  ---->  
       <article class="blog-post">
+        <h2 class="display-5 link-body-emphasis mb-1" id="Stuck-On-My-Psijic-Quest">Lost in Time: A Psijic Apprentice’s Struggle</h2>
+        <p class="blog-post-meta">January 17, 2024 by Sephia Sky</p>
+        <p>Hi everyone! I'm so excited to share with you a story about my journey to <a href="https://alcasthq.com/eso-psijic-order-leveling-guide/">level up the Psijic Order skill line</a> in Elder Scrolls Online. It was a crazy adventure that took me months to complete, and I learned a lot along the way.</p>
+        <blockquote>
+        <p>The Psijic Order is a mysterious faction of mages that can manipulate time and space. They have some awesome abilities that can help you in combat, exploration, and crafting. To unlock their skill line, you have to complete a series of quests that take you all over Tamriel and beyond.</p>
+        <blockquote>
+        <p>I started this questline with one of my characters, but then I got distracted by other things in the game. I decided to take a break from the Psijic Order and focus on other aspects of ESO. I thought I could resume the questline anytime I wanted, but boy was I wrong!</p>
+        <blockquote> 
+        <p>When I tried to get back to it, I realized that I had no idea where I left off. The quest was not in my journal, and I couldn't find any clues or markers on the map. I searched everywhere in Summerset Isle and Arteum, the two main locations of the Psijic Order, but nothing. I was stuck!</p>
+        <blockquote>
+        <p>I was desperate for help, so I turned to the internet. I asked on Steam forums, searched online, and posted on ESO forums, but nothing. No one seemed to have the same problem as me, or they didn't know how to solve it. I felt like giving up.</p>
+        <blockquote>
+        <p>But then, something amazing happened. I remembered that the NPC who gave me the quest also gave me a map item. A map item that I had completely forgotten about! I checked my inventory, but I couldn't find it. Where was it?</p>
+        <blockquote>
+        <p>Then it hit me. The map item was not in my regular inventory, but in a special tab called Quest Items. A tab that I had never used before! I opened it, and there it was: the Psijic Map. I right-clicked on it, and it showed me where to go next. I was so happy!</p>
+        <blockquote>
+        <p>I followed the map, and it led me to the next quest giver. From there, it was smooth sailing. I completed the rest of the questline without any problems, and finally unlocked the Psijic Order skill line. It was such a relief!</p>
+        <blockquote>
+        <p>I hope you enjoyed my story, and maybe learned something from it. If you ever want to level up the Psijic Order skill line, don't forget to check your Quest Items tab! You never know what you might find there.</p>
+        <hr>
+        <p>I'll be posting this on my <a href="https://twitter.com/sephia_sky">Twitter</a> account, let me know your comment. Thanks for reading, and happy gaming!</p>
+      </article>
+      <!---- ends here  ---->        
+
+      <article class="blog-post">
         <h2 class="display-5 link-body-emphasis mb-1" id="Player-Issues-With-MMORPG">The Grind, the Lag, and the Rage Quit: MMORPG Realities</h2>
         <p class="blog-post-meta">January 15, 2024 by Sephia Sky</p>
 
@@ -155,7 +180,7 @@
         <hr>
         <p>What do you think? Do you agree with me? Have you ever experienced this problem with mmorpgs? How do you cope with it? I'll be posting this on my <a href="https://twitter.com/sephia_sky">Twitter</a> account, let me know your comment. Thanks for reading!</p>            
       </article>
-      <!---- ends here  ---->  
+
       <article class="blog-post">
         <h2 class="display-5 link-body-emphasis mb-1">Sample blog post</h2>
         <p class="blog-post-meta">January 1, 2021 by <a href="#">Mark</a></p>
