--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
           <h4 class="fst-italic">Our Choice Pick</h4>
           <ol class="list-unstyled mb-0">
             <li><a href="https://blackdesert.pearlabyss.com/">Black Desert Online</a></li>
-            <li><a href="https://blackdesert.pearlabyss.com/">Destiny 2</a></li>
+            <li><a href="https://store.steampowered.com/app/1085660/Destiny_2/">Destiny 2</a></li>
             <li><a href="https://store.steampowered.com/app/39210/FINAL_FANTASY_XIV_Online/">Final Fantasy XIV</a></li>
             <li><a href="https://store.steampowered.com/app/238960/Path_of_Exile/">Path of Exile</a></li>
             <li><a href="https://worldofwarcraft.blizzard.com/en-us/">World of Warcraft</a></li>
