--- a/index.html
+++ b/index.html
@@ -138,7 +138,23 @@
       <h3 class="pb-4 mb-4 fst-italic border-bottom">
         Pages from the Lore Book
       </h3>
-    <!----  starts here  ---->  
+
+          <!----  starts here  ---->  
+      <article class="blog-post">
+        <h2 class="display-5 link-body-emphasis mb-1" id="Why-MMORPG-Cant-Have-A-Decent-PVP-Content">The Future of MMORPG PvP: What to Expect and How to Prepare</h2>
+        <p class="blog-post-meta">January 19, 2024 by Sephia Sky</p>
+        <p>Hi everyone! Today, I want to talk about why MMORPGs can't seem to have decent PvP content. This is based on my experience playing games like Ragnarok Online, Black Desert Online and Elder Scrolls Online. One reason, I suspect, is that there is a mismatch between the expectations and preferences of the community and the developers when it comes to what PvP content should be like. I'm not saying that this is a bad thing, it's just a reality that we have to face.</p>  
+        <blockquote>
+        <p>If you look at the top multiplayer online games with pure PvP content like Counter Strike and Valorant, you'll see that they are fast-paced and lethal. You can kill or be killed in one shot, and there is no room for error. There is no such thing as a healer, a tank or a DPS in these games. Everyone has the same role: survive and eliminate the enemy. Now, compare that to MMORPGs where players have different roles and abilities depending on their class and build. You can have tanks that can soak up damage and taunt enemies, healers that can restore health and buff allies, and DPS that can deal massive damage and crowd control. These roles are essential for PvE content, where you have to cooperate with your team to defeat challenging bosses and enemies. But in PvP content, they can create imbalance and frustration. Imagine if you had a tank that could dance around in front of the whole enemy team without taking any damage, or a healer that could heal your whole team to full health in an instant. That would be ridiculous and unfair in Counter Strike or Valorant, but it's normal in MMORPGs. And that leads to dissatisfaction and complaints from players who feel that some classes or builds are overpowered or underpowered, or that their class needs more survivability or damage. Or, they might just quit PvP altogether because they don't enjoy it.</p>  
+        <blockquote>
+        <p>So, what can we do about this? Well, I don't have a definitive answer, but I have some suggestions. First of all, we need to accept that MMORPGs are not pure PvP games, and that they have different mechanics and dynamics than games like Counter Strike or Valorant. We can't expect them to be the same, nor should we want them to be. MMORPGs have their own charm and appeal, and we should appreciate them for what they are. Second of all, we need to communicate with the developers and give them constructive feedback on what we like and don't like about PvP content. We need to be respectful and reasonable, and not just rant or whine about things that we don't agree with. We need to understand that the developers are trying their best to create a fun and balanced game for everyone, and that they can't please everyone all the time. Third of all, we need to have fun and enjoy the game for what it is. We need to remember that PvP is not the only aspect of MMORPGs, and that there are many other things to do and explore in these games. We need to find our own niche and playstyle, and not let PvP ruin our experience or mood.</p>  
+        <blockquote>
+        <p>That's all for today's blog post. I hope you enjoyed reading it and found it interesting. Please let me know what you think in the comments below. Thanks for reading, and see you next time!</p>
+        <hr>
+        <p>Do you agree or disagree with me? Do you have any other thoughts or opinions on why MMORPGs can't have decent PvP content? I'll be posting this on my <a href="https://twitter.com/sephia_sky">Twitter</a> account, let me know your comment.  I'd love to hear from you.</p>
+      </article>
+      <!---- ends here  ---->   
+          
       <article class="blog-post">
         <h2 class="display-5 link-body-emphasis mb-1" id="Stuck-On-My-Psijic-Quest">Lost in Time: A Psijic Apprentice’s Struggle</h2>
         <p class="blog-post-meta">January 17, 2024 by Sephia Sky</p>
@@ -162,7 +178,7 @@
         <hr>
         <p>I'll be posting this on my <a href="https://twitter.com/sephia_sky">Twitter</a> account, let me know your comment. Thanks for reading, and happy gaming!</p>
       </article>
-      <!---- ends here  ---->        
+     
 
       <article class="blog-post">
         <h2 class="display-5 link-body-emphasis mb-1" id="Player-Issues-With-MMORPG">The Grind, the Lag, and the Rage Quit: MMORPG Realities</h2>
