--- a/index.html
+++ b/index.html
@@ -141,6 +141,17 @@
 
           <!----  starts here  ---->  
       <article class="blog-post">
+        <h2 class="display-5 link-body-emphasis mb-1" id="Black-Desert-Online-Arena-Of-Solare">Black Desert Online’s Arena of Solare: The Future of PvP Gaming?</h2>
+        <p class="blog-post-meta">January 21, 2024 by Sephia Sky</p>
+        <p>Hello, everyone! Welcome to my blog. Today I want to tell you about Black Desert Online. I'm back to playing this game and I'm loving it! I am still playing Elder Scrolls Online, but not to seriously because issues the devs aren't fixing. I tried BDO before, but it was so laggy in town where I wanted to do life skills. I hate grinding too much, especially if I don't see any progress. But when I logged in two days ago, the game was smooth and stable. I could stay in Velia and do my afk activities without any lag or disconnects. One of the cool features of this game is that you can let your character fish or process materials on its own until it runs out of resources or inventory space. Disconnects were a big problem before, but now that they're fixed, I think I'll stick with this game for a while.</p>
+        <blockquote>
+        <p>Another thing that I'm excited about is the 3v3 pvp system. It's a new mode that was added recently, and it's a lot of fun. You can use any character that you have already leveled up, and you just select the gears for that game mode. You can choose from different classes and roles, and team up with two other players to fight against another team. The matches are fast and intense, and you can earn rewards and rank up based on your performance. The best part is that the gear system is separate from the main game, so you don't have to worry about being undergeared or outmatched. You can just enjoy the pvp without any stress. I hope to try it soon, but first I have to relearn how to do the combos and buttons for combat. Luckily, I still remember how to cook and fish, and there are plenty of guides online anyway. I'll keep writing about BDO in the future.</p>
+        <hr>
+        <p>Are you playing Black Desert Online? Have you tried Arena Of Solare? I'll be posting this on my <a href="https://twitter.com/sephia_sky">Twitter</a> account, let me know your comment.  I'd love to hear from you.</p>
+      </article>
+      <!---- ends here  ---->   
+
+      <article class="blog-post">
         <h2 class="display-5 link-body-emphasis mb-1" id="Why-MMORPG-Cant-Have-A-Decent-PVP-Content">The Future of MMORPG PvP: What to Expect and How to Prepare</h2>
         <p class="blog-post-meta">January 19, 2024 by Sephia Sky</p>
         <p>Hi everyone! Today, I want to talk about why MMORPGs can't seem to have decent PvP content. This is based on my experience playing games like Ragnarok Online, Black Desert Online and Elder Scrolls Online. One reason, I suspect, is that there is a mismatch between the expectations and preferences of the community and the developers when it comes to what PvP content should be like. I'm not saying that this is a bad thing, it's just a reality that we have to face.</p>  
@@ -153,7 +164,7 @@
         <hr>
         <p>Do you agree or disagree with me? Do you have any other thoughts or opinions on why MMORPGs can't have decent PvP content? I'll be posting this on my <a href="https://twitter.com/sephia_sky">Twitter</a> account, let me know your comment.  I'd love to hear from you.</p>
       </article>
-      <!---- ends here  ---->   
+
           
       <article class="blog-post">
         <h2 class="display-5 link-body-emphasis mb-1" id="Stuck-On-My-Psijic-Quest">Lost in Time: A Psijic Apprentice’s Struggle</h2>
