--- a/index.html
+++ b/index.html
@@ -82,10 +82,17 @@
       .bd-mode-toggle {
         z-index: 1500;
       }
+
+      body {
+        padding-top: 56px; 
+      }
+
+      main.container {
+        padding-top: 0.5rem; 
+      }
     </style>
   </head>
-  
-<body>
+  <body>
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
   <div class="container-fluid">
     <a class="navbar-brand" href="https://www.sephiasky.me">Sephia Sky</a>
@@ -145,43 +152,7 @@
         <p class="blog-post-meta">January 21, 2024 by Sephia Sky</p>
         <p>Hello, everyone! Welcome to my blog. Today I want to tell you about Black Desert Online. I'm back to playing this game and I'm loving it! I am still playing Elder Scrolls Online, but not to seriously because issues the devs aren't fixing. I tried BDO before, but it was so laggy in town where I wanted to do life skills. I hate grinding too much, especially if I don't see any progress. But when I logged in two days ago, the game was smooth and stable. I could stay in Velia and do my afk activities without any lag or disconnects. One of the cool features of this game is that you can let your character fish or process materials on its own until it runs out of resources or inventory space. Disconnects were a big problem before, but now that they're fixed, I think I'll stick with this game for a while.</p>
         <blockquote>
-        <p>Another thing that I'm excited about is the 3v3 pvp system. It's a new mode that was added recently, and it's a lot of fun. You can use any character that you have already leveled up, and you just select the gears for that game mode. You can choose from different classes and roles, and team up with two other players to fight against another team. The matches are fast and intense, and you can earn rewards and rank up based on your performance. The best part is that the gear system is separate from the main game, so you don't have to worry about being undergeared or outmatched. You can just enjoy the pvp without any stress. I hope to try it soon, but first I have to relearn how to do the combos and buttons for combat. Luckily, I still remember how to cook and fish, and there are plenty of guides online anyway. I'll keep writing about BDO in the future.</p>
-        <hr>
-        <p>Are you playing Black Desert Online? Have you tried Arena Of Solare? I'll be posting this on my <a href="https://twitter.com/sephia_sky">Twitter</a> account, let me know your comment.  I'd love to hear from you.</p>
-      </article>
-      <!---- ends here  ---->   
-
-      <article class="blog-post">
-        <h2 class="display-5 link-body-emphasis mb-1" id="Why-MMORPG-Cant-Have-A-Decent-PVP-Content">The Future of MMORPG PvP: What to Expect and How to Prepare</h2>
-        <p class="blog-post-meta">January 19, 2024 by Sephia Sky</p>
-        <p>Hi everyone! Today, I want to talk about why MMORPGs can't seem to have decent PvP content. This is based on my experience playing games like Ragnarok Online, Black Desert Online and Elder Scrolls Online. One reason, I suspect, is that there is a mismatch between the expectations and preferences of the community and the developers when it comes to what PvP content should be like. I'm not saying that this is a bad thing, it's just a reality that we have to face.</p>  
-        <blockquote>
-        <p>If you look at the top multiplayer online games with pure PvP content like Counter Strike and Valorant, you'll see that they are fast-paced and lethal. You can kill or be killed in one shot, and there is no room for error. There is no such thing as a healer, a tank or a DPS in these games. Everyone has the same role: survive and eliminate the enemy. Now, compare that to MMORPGs where players have different roles and abilities depending on their class and build. You can have tanks that can soak up damage and taunt enemies, healers that can restore health and buff allies, and DPS that can deal massive damage and crowd control. These roles are essential for PvE content, where you have to cooperate with your team to defeat challenging bosses and enemies. But in PvP content, they can create imbalance and frustration. Imagine if you had a tank that could dance around in front of the whole enemy team without taking any damage, or a healer that could heal your whole team to full health in an instant. That would be ridiculous and unfair in Counter Strike or Valorant, but it's normal in MMORPGs. And that leads to dissatisfaction and complaints from players who feel that some classes or builds are overpowered or underpowered, or that their class needs more survivability or damage. Or, they might just quit PvP altogether because they don't enjoy it.</p>  
-        <blockquote>
-        <p>So, what can we do about this? Well, I don't have a definitive answer, but I have some suggestions. First of all, we need to accept that MMORPGs are not pure PvP games, and that they have different mechanics and dynamics than games like Counter Strike or Valorant. We can't expect them to be the same, nor should we want them to be. MMORPGs have their own charm and appeal, and we should appreciate them for what they are. Second of all, we need to communicate with the developers and give them constructive feedback on what we like and don't like about PvP content. We need to be respectful and reasonable, and not just rant or whine about things that we don't agree with. We need to understand that the developers are trying their best to create a fun and balanced game for everyone, and that they can't please everyone all the time. Third of all, we need to have fun and enjoy the game for what it is. We need to remember that PvP is not the only aspect of MMORPGs, and that there are many other things to do and explore in these games. We need to find our own niche and playstyle, and not let PvP ruin our experience or mood.</p>  
-        <blockquote>
-        <p>That's all for today's blog post. I hope you enjoyed reading it and found it interesting. Please let me know what you think in the comments below. Thanks for reading, and see you next time!</p>
-        <hr>
-        <p>Do you agree or disagree with me? Do you have any other thoughts or opinions on why MMORPGs can't have decent PvP content? I'll be posting this on my <a href="https://twitter.com/sephia_sky">Twitter</a> account, let me know your comment.  I'd love to hear from you.</p>
-      </article>
-
-          
-      <article class="blog-post">
-        <h2 class="display-5 link-body-emphasis mb-1" id="Stuck-On-My-Psijic-Quest">Lost in Time: A Psijic Apprentice’s Struggle</h2>
-        <p class="blog-post-meta">January 17, 2024 by Sephia Sky</p>
-        <p>Hi everyone! I'm so excited to share with you a story about my journey to <a href="https://alcasthq.com/eso-psijic-order-leveling-guide/">level up the Psijic Order skill line</a> in Elder Scrolls Online. It was a crazy adventure that took me months to complete, and I learned a lot along the way.</p>
-        <blockquote>
-        <p>The Psijic Order is a mysterious faction of mages that can manipulate time and space. They have some awesome abilities that can help you in combat, exploration, and crafting. To unlock their skill line, you have to complete a series of quests that take you all over Tamriel and beyond.</p>
-        <blockquote>
-        <p>I started this questline with one of my characters, but then I got distracted by other things in the game. I decided to take a break from the Psijic Order and focus on other aspects of ESO. I thought I could resume the questline anytime I wanted, but boy was I wrong!</p>
-        <blockquote> 
-        <p>When I tried to get back to it, I realized that I had no idea where I left off. The quest was not in my journal, and I couldn't find any clues or markers on the map. I searched everywhere in Summerset Isle and Arteum, the two main locations of the Psijic Order, but nothing. I was stuck!</p>
-        <blockquote>
-        <p>I was desperate for help, so I turned to the internet. I asked on Steam forums, searched online, and posted on ESO forums, but nothing. No one seemed to have the same problem as me, or they didn't know how to solve it. I felt like giving up.</p>
-        <blockquote>
-        <p>But then, something amazing happened. I remembered that the NPC who gave me the quest also gave me a map item. A map item that I had completely forgotten about! I checked my inventory, but I couldn't find it. Where was it?</p>
-        <blockquote>
-        <p>Then it hit me. The map item was not in my regular inventory, but in a special tab called Quest Items. A tab that I had never used before! I opened it, and there it was: the Psijic Map. I right-clicked on it, and it showed me where to go next. I was so happy!</p>
+        <p>Another thing that I'm excited about is the 3v3 pvp system. It's a new mode that was added recently, and it's a lot of fun. You can use any character that you have already leveled up, and you just select the gears for that game mode. You can choose from different classes and roles, and team u...(truncated 7045 characters)... and it showed me where to go next. I was so happy!</p>
         <blockquote>
         <p>I followed the map, and it led me to the next quest giver. From there, it was smooth sailing. I completed the rest of the questline without any problems, and finally unlocked the Psijic Order skill line. It was such a relief!</p>
         <blockquote>
@@ -221,7 +192,7 @@
           <ul class="list-unstyled">
             <li>
               <a class="d-flex flex-column flex-lg-row gap-3 align-items-start align-items-lg-center py-3 link-body-emphasis text-decoration-none border-top" href="https://youtu.be/fW6o7rdhxI8?si=rl5J9r5vG6S5p555">
-                <svg class="bd-placeholder-img" width="100%" height="96" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>
+                <img src="https://img.youtube.com/vi/fW6o7rdhxI8/maxresdefault.jpg" class="bd-placeholder-img" width="100%" height="96" alt="How to get Crown Gems in Elder Scrolls Online" loading="lazy">
                 <div class="col-lg-8">
                   <h6 class="mb-0">How to get Crown Gems in Elder Scrolls Online</h6>
                   <small class="text-body-secondary">Aug 19, 2020</small>
@@ -230,7 +201,7 @@
             </li>
             <li>
               <a class="d-flex flex-column flex-lg-row gap-3 align-items-start align-items-lg-center py-3 link-body-emphasis text-decoration-none border-top" href="https://youtu.be/uRR7yakGVQw?si=4hPRhJNQA31XgUJW">
-                <svg class="bd-placeholder-img" width="100%" height="96" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>
+                <img src="https://img.youtube.com/vi/uRR7yakGVQw/maxresdefault.jpg" class="bd-placeholder-img" width="100%" height="96" alt="How to get Bastian Hallix as companion in ESO" loading="lazy">
                 <div class="col-lg-8">
                   <h6 class="mb-0">How to get Bastian Hallix as companion in ESO</h6>
                   <small class="text-body-secondary">January 14, 2023</small>
@@ -239,7 +210,7 @@
             </li>
             <li>
               <a class="d-flex flex-column flex-lg-row gap-3 align-items-start align-items-lg-center py-3 link-body-emphasis text-decoration-none border-top" href="https://youtu.be/Yj4bjXT3HoY?si=Eiy_Z4yDDe5DC8fz">
-                <svg class="bd-placeholder-img" width="100%" height="96" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>
+                <img src="https://img.youtube.com/vi/Yj4bjXT3HoY/maxresdefault.jpg" class="bd-placeholder-img" width="100%" height="96" alt="How to get Mirri Elendis as companion in ESO" loading="lazy">
                 <div class="col-lg-8">
                   <h6 class="mb-0">How to get Mirri Elendis as companion in ESO</h6>
                   <small class="text-body-secondary">Jun 3, 2021</small>
