--- a/index.html
+++ b/index.html
@@ -368,11 +368,11 @@
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
-              <h5 class="modal-title">Hold more BBY jettons</h5>
+              <h5 class="modal-title">Support SephiaSky Gaming! And, have fun</h5>
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-              <p>Enter your <strong>TON</strong> wallet address below. We will check it as you add more Buboy tokens.</p>
+              <p>Enter your <strong>TON</strong> wallet address below. Go get more <a href="https://app.ston.fi/swap?chartVisible=false&ft=TON&tt=EQAV4qyClq_H1-suQgHsXlDLJ9AASI_a3NjT4bh378lunZLZ&fa=%221%22" target="_blank">BBY</a> tokens.</p>
               
               <form id="walletForm">
                 <div class="mb-3">
@@ -391,4 +391,5 @@
         </div>
       </div>
 </html>
+
 
