--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     <div class="col-lg-6 px-0 position-relative" style="z-index: 1;">
       <h1 id="heroTitle" class="display-4 fst-italic">Secrets of Aletheia</h1>
       <p id="heroDesc" class="lead my-3">Enter a dark fantasy world where death is only the beginning. Play as a fallen warrior lich clad in ebony armor.</p>
-      <p class="lead mb-0"><a id="heroLink" href="#" class="text-white fw-bold">Join the Waitlist...</a></p>
+      <p class="lead mb-0"><a id="heroLink" href="#" class="text-white fw-bold">Available in Early Access....</a></p>
     </div>
   </div>
 
@@ -484,6 +484,7 @@
         </div>
       </div>
 </html>
+
 
 
 
